Update interface and impls of RefactoringService. Update docs.  Chat requests are available from /chat and /stream/chat.